# libipc3270

./: .gitignore  Makefile.in  PKGBUILD.mingw  README.md  autogen.sh  build.bat  clean.bat  configure.ac  gitsync.sh  install-debug.bat  install.bat  ipc3270.exp  ipc3270.lib  ipcclient.cbp  lib3270.exp  lib3270.lib  pw3270-plugin-ipc.cbp
.github/workflows/: codeql-analysis.yml  codeql.yml  msvc.yml  msys2.yml  publish.yml
arch/: PKGBUILD
client/: Makefile.in  configure.ac  ipcclient.cbp  lib3270++.cbp  link.sh
client/sdk/: dynamic.pc.in  ipc3270-static.pc.in  ipc3270.pc.in
client/src/core/: abstract.cc  actions.cc  attribute.cc  constants.cc  host.cc  property.cc  session.cc
client/src/core/linux/: attribute.cc  request.cc  session.cc
client/src/core/linux/dynamic/: init.cc
client/src/core/windows/: pop.cc  request.cc  resources.rc.in  session.cc  tools.cc
client/src/core/windows/dynamic/: init.cc
client/src/host/: actions.cc  init.cc  pop.cc  private.h  properties.cc  push.cc  states.cc  stream.cc  string.cc
client/src/include/: ipc-client-internals.h
client/src/include/lib3270/: ipc.h
client/src/include/lib3270/ipc/: action.h  request.h
client/src/session/: get.cc  set.cc  tools.cc
client/src/session/local/: actions.cc  attribute.cc  events.cc  get.cc  init.cc  private.h  properties.cc  session.cc  set.cc  tools.cc  wait.cc
client/src/session/remote/: actions.cc  attribute.cc  get.cc  init.cc  private.h  properties.cc  session.cc  set.cc  tools.cc  wait.cc
client/src/session/remote/linux/: request.cc  session.cc
client/src/session/remote/windows/: request.cc  session.cc
client/src/testprogram/: testprogram.cc
common/src/include/: config.h.in
common/src/include/lib3270/: ipc-glib.h  ipc.h
conf/: systemd.service.in
debian/: changelog  control  libipc3270.dsc  rules
doxygen/: doxyfile.in
locale/: Makefile.in  libipc3270.pot  pt_BR.po
plugin/: Makefile.in  autogen.sh  configure.ac  pw3270-plugin-ipc.cbp  valgrind.suppression
plugin/src/core/: response.c
plugin/src/core/methods/: field.c  methods.c  private.h
plugin/src/core/windows/: gobject.h  pipesource.c
plugin/src/include/: config.h.in  internals.h
plugin/src/plugin/: private.h
plugin/src/plugin/windows/: resources.rc.in
plugin/src/testprogram/: testprogram.c
plugin/testscripts/: callmethod.sh  dbus.conf  getcursorposition.sh
rpm/: _service  libipc3270.spec  pw3270-plugin-ipc.spec
sdk/windows/: dynamic.pc.in  static.pc.in
server/: Makefile.in  link.sh  pw3270-plugin-ipc.cbp  valgrind.suppression
server/src/core/: constants.c  convert.c  getproperties.c  methods.c  response.c  setproperties.c  tools.c
server/src/core/linux/: gobject.c  gobject.h  response.c  start.c  stop.c
server/src/core/methods/: action.c  cursor.c  field.c  get.c  methods.c  network.c  private.h  set.c  wait.c
server/src/core/windows/: gobject.c  gobject.h  inout.c  pipesource.c  response.c  start.c  stop.c
server/src/include/: internals.h  ipc-glib.h  ipc-glib.h.in
server/src/plugin/: plugin.c  private.h
server/src/plugin/windows/: resources.rc.in
server/src/service/: methods.c  service.c  session.c  setproperties.c
server/src/service/windows/: resources.rc.in
server/src/testprogram/: testprogram.c
server/testscripts/: getproperty.sh  getstring.sh  getstringat.sh  geturl.sh  introspect.sh  setstring.sh  seturl.sh
service/src/: getproperties.c  service.c
service/src/linux/: start.c
src/: constants.c  convert.c  getproperties.c  methods.c  private.h  setproperties.c  start.c
src/client/: lib3270++.cbp
src/client/src/core/: abstract.cc  events.cc  host.cc  session.cc
src/client/src/os/linux/: request.cc  session.cc
src/client/src/os/windows/: request.cc
src/client/src/session/local/: events.cc  session.cc
src/client/src/session/remote/: session.cc
src/core/: abstract.cc  actions.cc  attribute.cc  constants.cc  convert.c  events.cc  getproperties.c  methods.c  property.cc  request.cc  session.cc  setproperties.c  tools.c  versions.cc  versions.cc.in
src/core/linux/: attribute.cc  gobject.c  gobject.h  request.cc  start.c  stop.c
src/core/linux/dynamic/: init.cc
src/core/windows/: attribute.cc  gobject.c  gobject.h  inout.c  pipesource.c  pop.cc  push.cc  request.cc  resources.rc.in  start.c  stop.c  tools.cc
src/core/windows/dynamic/: init.cc
src/host/: actions.cc  init.cc  pop.cc  private.h  properties.cc  push.cc  states.cc  stream.cc  string.cc
src/include/: config.h.in  ipc-client-internals.h  version.h  version.h.in
src/include/lib3270/: ipc-glib.h  ipc.h
src/include/lib3270/ipc/: action.h  attribute.h  field.h  host.h  property.h  request.h  session.h
src/include/private/: session.h
src/linux/: getproperties.c  gobject.c  gobject.h  methods.c  setproperties.c  start.c  start.c.1
src/plugin/: plugin.c  private.h  start.c
src/service/: getproperties.c  methods.c  private.h  service.c  session.c  setproperties.c
src/service/linux/: start.c
src/session/: action.cc  get.cc  set.cc  tools.cc
src/session/local/: actions.cc  attribute.cc  events.cc  field.cc  get.cc  init.cc  private.h  properties.cc  set.cc  wait.cc
src/session/remote/: actions.cc  attribute.cc  field.cc  get.cc  private.h  properties.cc  request.cc  session.cc  set.cc  tools.cc  wait.cc
src/session/remote/linux/: dbus-request.h  request.cc  session.cc
src/session/remote/windows/: pipe-request.h  pop.cc  push.cc  request.cc  session.cc
src/testprogram/: testprogram.c  testprogram.cc
src/windows/: gobject.c  gobject.h  inout.c  pipesource.c
testscripts/: callmethod.sh  getproperty.sh  introspect-plugin.sh  introspect-service.sh  introspect.sh  setstring.sh
win/: Makefile-ci.msc  Makefile-debug.msc  Makefile.msc  ci-build.sh  filament.props.in  install-cross.sh  ipc3270.nuspec.in  sources.mak
win/mingw32/: mingw32-pw3270-plugin-ipc.spec
win/mingw64/: _service  mingw64-pw3270-plugin-ipc.spec
win/x86_32/: _service  mingw32-libipc3270.spec
win/x86_64/: _service  mingw64-libipc3270.spec
